[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/cardengine/card/abstract_card.tscn" type="PackedScene" id=1]
[ext_resource path="res://cards/normal/normal_card.gd" type="Script" id=2]
[ext_resource path="res://cards/normal/card_back_background.png" type="Texture" id=3]
[ext_resource path="res://cards/normal/card_front_background.png" type="Texture" id=4]
[ext_resource path="res://cards/normal/card_name_background.png" type="Texture" id=5]
[ext_resource path="res://fonts/ArchivoNarrow-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://cards/normal/card_shadow.png" type="Texture" id=7]
[ext_resource path="res://cards/normal/card_desc_background.png" type="Texture" id=8]
[ext_resource path="res://cards/normal/card_cost_background.png" type="Texture" id=9]
[ext_resource path="res://cards/normal/card_picture_placeholder.png" type="Texture" id=10]
[ext_resource path="res://cards/normal/card_placeholder.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 28
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 17
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 52
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 11
font_data = ExtResource( 6 )

[node name="NormalCard" instance=ExtResource( 1 )]
script = ExtResource( 2 )
size = Vector2( 420, 600 )

[node name="Shadow" type="Sprite" parent="AnimContainer" index="0"]
position = Vector2( -1.34912, 0.400543 )
texture = ExtResource( 7 )

[node name="Background" type="Sprite" parent="AnimContainer/Placeholder" index="0"]
texture = ExtResource( 11 )

[node name="Background" type="Sprite" parent="AnimContainer/Front" index="0"]
texture = ExtResource( 4 )

[node name="NameBackground" type="Sprite" parent="AnimContainer/Front" index="1"]
texture = ExtResource( 5 )

[node name="Name" type="Label" parent="AnimContainer/Front/NameBackground" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -151.0
margin_top = -24.0
margin_right = -195.0
margin_bottom = -67.0
custom_fonts/font = SubResource( 1 )
text = "Card Name"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DescBackground" type="Sprite" parent="AnimContainer/Front" index="2"]
position = Vector2( 0, 150 )
texture = ExtResource( 8 )

[node name="Desc" type="Label" parent="AnimContainer/Front/DescBackground" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -138.0
margin_top = -91.0
margin_right = -167.0
margin_bottom = -117.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.141176, 0.141176, 0.141176, 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempus, enim eu blandit sodales, risus mi egestas felis, non mattis tellus est vel turpis. Sed fermentum rutrum varius. "
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostBackground" type="Sprite" parent="AnimContainer/Front" index="3"]
position = Vector2( -184.699, -281.75 )
texture = ExtResource( 9 )

[node name="Cost" type="Label" parent="AnimContainer/Front/CostBackground" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -41.0
margin_right = -48.0
margin_bottom = -48.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PictureGroup" type="Node2D" parent="AnimContainer/Front" index="4"]

[node name="Common" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="0"]
position = Vector2( 0, -150 )
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/Common" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -104.0
margin_right = -152.0
margin_bottom = -104.0
custom_fonts/font = SubResource( 1 )
text = "Common"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uncommon" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="1"]
visible = false
position = Vector2( 0, -150 )
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/Uncommon" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -104.0
margin_right = -152.0
margin_bottom = -104.0
custom_fonts/font = SubResource( 1 )
text = "Uncommon"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rare" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="2"]
visible = false
position = Vector2( 0, -150 )
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/Rare" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -104.0
margin_right = -152.0
margin_bottom = -104.0
custom_fonts/font = SubResource( 1 )
text = "Rare"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MythicRare" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="3"]
visible = false
position = Vector2( 0, -150 )
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/MythicRare" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -104.0
margin_right = -152.0
margin_bottom = -104.0
custom_fonts/font = SubResource( 1 )
text = "Mythic Rare"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BasicLand" type="Sprite" parent="AnimContainer/Front/PictureGroup" index="4"]
visible = false
position = Vector2( 0, -150 )
texture = ExtResource( 10 )

[node name="Text" type="Label" parent="AnimContainer/Front/PictureGroup/BasicLand" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -152.0
margin_top = -104.0
margin_right = -152.0
margin_bottom = -104.0
custom_fonts/font = SubResource( 1 )
text = "Basic Land"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardId" type="Label" parent="AnimContainer/Front" index="5"]
margin_left = 76.0
margin_top = 230.0
margin_right = 141.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.67451, 0.67451, 0.67451, 1 )
text = "card_id"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="AnimContainer/Back" index="0"]
texture = ExtResource( 3 )

[node name="MouseArea" parent="AnimContainer" index="4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -300.0
margin_right = 210.0
margin_bottom = 300.0
[connection signal="instance_changed" from="." to="." method="_on_NormalCard_instance_changed"]
